@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

title: General relationships of the packages used in the project

package model {
    package player {}
    package questions {}
    class Game
    class JsonParser
    class Limit
}

package view {
    package screens {}
    class GameApp
}

package controllers {
    package handlers {}
}

package exceptions {}

view -> model: <<uses>>
view <--> controllers: <<access>>
view --> exceptions: <<uses>>
controllers --> exceptions: <<uses>>
controllers -> model: <<access>>
model -> exceptions: <<uses>>

Game <<class>>
JsonParser <<class>>
Limit <<class>>
GameApp <<class>>

@enduml